--- a/gemfile
+++ b/gemfile
@@ -50,3 +50,4 @@ gem 'refinerycms-works', path: 'vendor/extensions'
 
 gem 'refinerycms-posts', path: 'vendor/extensions'
 gem 'refinerycms-biographies', path: 'vendor/extensions'
+gem 'refinerycms-contacts', path: 'vendor/extensions'
